Implemented UC-MCP-003 using mcp_creator agent, analizyed and fixed vulnerabilities, created mdslides_generator agent and generated project_documentation.slides